--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ models/
 .installed.cfg
 *.egg
 MANIFEST
+*.zip
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
